tests/specs/test/only_failed/main.out
running 1 test from ./main.ts
fails on its own ... FAILED ([WILDCARD])

 ERRORS 

fails on its own => ./main.ts:3:11
error: Error: boom
  throw new Error("boom");
        ^
    at [WILDCARD]main.ts:4:9

 FAILURES 

fails on its own => ./main.ts:3:11

FAILED | 0 passed | 1 failed ([WILDCARD])

error: Test failed
